# contentizer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
back/: .gitignore  pyproject.toml
back/src/: agent.py  agents_instruction_prompt.py  global_constants.py  runner.py  shared_state.py
back/src/api/: agent_routes.py  main.py  routes.py  video_routes.py
back/src/models/: project_model.py
back/src/repository/: base_repository.py  project_repository.py
back/src/services/: mongo_client.py  uuid.py  video_edit.py
back/src/tools/: content_creator.py  freepik.py
front/contentizer/: package-lock.json  package.json
front/contentizer/app/: globals.css  layout.tsx  page.tsx
front/contentizer/app/[...slugs]/: page.tsx
front/contentizer/app/components/: FloatingChat.tsx  PromptInput.tsx  RecentProjects.tsx  VideoEditor.tsx  VideoSequence.tsx  VideoUploader.tsx
front/contentizer/app/lib/: file.ts  projects.ts  prompt.ts  stream.ts  video.ts
front/contentizer/app/types/: project_types.ts
src/: agent.py  app.py
src/tools/: content_creator.py  freepik.py
test/tools/: content_creator_test.py
