[project]
name = "contentizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "google-adk>=1.19.0",
    "pillow>=12.0.0",
    "pytest>=9.0.1",
    "uvicorn>=0.30.0",
    "fastapi[standard]",
    "python-multipart>=0.0.9",
    "pymongo>=4.15.5",
]
